--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,10 @@
 <h1>About</h1>
+<p>原班級:四設三乙</p>
+<p>修課班級:四設一甲</p>
+<p>姓名:林晉廷</p>
+<p>學號:40832244</p>
+<p>網站倉儲:<a href="https://github.com/40832244-github/cp2021_hw">https://github.com/40832244-github/cp2021_hw</a></p>
+<p><span>課程網站:</span><a href="https://40832244-github.github.io/cp2021_hw/">https://40832244-github.github.io/cp2021_hw/</a></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4>利用 cmsimde 建立靜態網誌方法:</h4>
 <p>1. 在 github 建立倉儲, git clone 到近端</p>
